SPIRALCOMM-001 Updated README for instructions

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^3.0.1",
     "rxjs": "~6.2.0",
+    "ts-mockito": "^2.3.1",
     "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
   },
